--- a/.github/workflows/label.yml
+++ b/.github/workflows/label.yml
@@ -21,5 +21,5 @@ jobs:
 
     steps:
     - uses: actions/labeler@v4
-      # with:
-      #   repo-token: "${{ secrets.TOKEN }}"
+      with:
+        repo-token: "${{ secrets.GITHUB_TOKEN }}"
